# Adversarial-Population-Sandbox

./: .env.example  .gitignore  README.md  agent.ipynb  app.py  projectspec.md  pyproject.toml  requirements.txt  roadmap.md  techstackinfra.md
aps/: __init__.py  config.py  log_store.py
aps/dissident/: __init__.py  router.py
aps/inference/: __init__.py  llm.py
aps/memory/: __init__.py  store.py
aps/orchestrator/: __init__.py  graph.py
aps/persona/: __init__.py  builder.py
aps/reporting/: __init__.py  report_agent.py
aps/schemas/: __init__.py  agent.py  message.py  room.py
tests/: __init__.py  test_dissident.py  test_integration.py  test_orchestrator.py  test_persona.py  test_schemas.py
