[project]
name = "adversarial-population-sandbox"
version = "0.1.0"
description = "A multi-agent system that stress-tests scenarios by forcing a 1% Dissident quota to prevent groupthink and uncover black swan risks."
readme = "roadmap.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.40.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ui = [
    "streamlit>=1.35",
]
swarm = [
    "celery[redis]>=5.4",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
